--- a/portfolio.html
+++ b/portfolio.html
@@ -29,10 +29,33 @@
             </div>
 
             <div class="projectscontainer">
-            <img class="projectsbg" src="assets/images/placeimg_1.jpg">
-            <div class="projectlabel"><a class="projlink" href="https://salmanghouse1.github.io/global-news-finder/" target="_blank">
-                Global News Finder
-            </a></div></div>
+                <img class="projectsbg" src="assets/images/placeimg_1.jpg">
+                <div class="projectlabel"><a class="projlink" href="https://mysterious-badlands-54283.herokuapp.com/5" target="_blank">
+                    On-Demand-CRM
+                </a></div>
+            </div>
+
+            <div class="projectscontainer">
+                <img class="projectsbg" src="assets/images/placeimg_1.jpg">
+                <div class="projectlabel"><a class="projlink" href="https://stephanreilly.itch.io/privacy-protectors" target="_blank">
+                    Privacy Protectors
+                </a></div>
+            </div>
+            
+            <div class="projectscontainer">
+                <img class="projectsbg" src="assets/images/placeimg_1.jpg">
+                <div class="projectlabel"><a class="projlink" href="https://memestagram1.herokuapp.com/" target="_blank">
+                    Memestagram
+                </a></div>
+            </div>
+
+            <div class="projectscontainer">
+                <img class="projectsbg" src="assets/images/placeimg_1.jpg">
+                <div class="projectlabel"><a class="projlink" href="https://www.thesputnik.ca/students-help-design-board-game/" target="_blank">
+                    Suspect
+                </a></div>
+            </div>
+            
 
         </section>
 
