--- a/portfolio.html
+++ b/portfolio.html
@@ -36,21 +36,21 @@
             </div>
 
             <div class="projectscontainer">
-                <img class="projectsbg" src="assets/images/placeimg_1.jpg">
+                <img class="projectsbg" src="assets/images/ui.jpg">
                 <div class="projectlabel"><a class="projlink" href="https://stephanreilly.itch.io/privacy-protectors" target="_blank">
                     Privacy Protectors
                 </a></div>
             </div>
             
             <div class="projectscontainer">
-                <img class="projectsbg" src="assets/images/placeimg_1.jpg">
+                <img class="projectsbg" src="assets/images/wd2.jpg">
                 <div class="projectlabel"><a class="projlink" href="https://memestagram1.herokuapp.com/" target="_blank">
                     Memestagram
                 </a></div>
             </div>
 
             <div class="projectscontainer">
-                <img class="projectsbg" src="assets/images/placeimg_1.jpg">
+                <img class="projectsbg" src="assets/images/wd.jpg">
                 <div class="projectlabel"><a class="projlink" href="https://www.thesputnik.ca/students-help-design-board-game/" target="_blank">
                     Suspect
                 </a></div>
