--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
             </div>
 
             <div class="projectscontainer">
-                <img class="projectsbg" src="assets/images/ui.jpg">
+                <img class="projectsbg" src="assets/images/ui.JPG">
                 <div class="projectlabel"><a class="projlink" href="https://stephanreilly.itch.io/privacy-protectors" target="_blank">
                     Privacy Protectors
                 </a></div>
