--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             <div>
                     <img class="portrait" src="assets/images/me.jpg" alt="Shayne Ganness">
                     <p>
-                        Place holder text. Place holder text.Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Pancakes. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. Place holder text. 
+                        Full-stack web developer with a background in game design.
+                        <br>
+                        Throughout my time in the field I have taken up the roles of designer, developer, programmer and tester on numerous projects, giving me the opportunity to work on various aspects of the design and development process. Moving forward, I am looking to find a role with a company that allows me to grow as a designer and developer.
                         <br> 
 
                     </p>
